[metadata]
name = django-leonardo
summary = A platform for fast building modern web applications with Django, FeinCMS, Horizon, Oscar and tons of another apps.
description-file =
    README.rst
author = Michael Kuty & Ales Komarek
author-email = kutymichael@gmail.com
home-page = https://github.com/django-leonardo/django-leonardo.git
classifier =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[files]
packages =
    leonardo

[extras_require]
blog = -r requirements/extras/blog.txt
folio = -r requirements/extras/folio.txt
forms = -r requirements/extras/forms.txt
links = -r requirements/extras/links.txt
store = -r requirements/extras/store.txt
static = -r requirements/extras/static.txt
oauth = -r requirements/extras/oauth.txt
sentry = -r requirements/extras/sentry.txt
themes = -r requirements/extras/themes.txt
adminlte = -r requirements/extras/adminlte.txt
pagepermissions = -r requirements/extras/pagepermissions.txt
redis = -r requirements/extras/redis.txt
redactor = -r requirements/extras/redactor.txt
debug = -r requirements/debug.txt
tests = -r requirements/tests.txt

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source

[wheel]
python-tag = py2

[pytest]
python_files=test_*.py *tests.py

[flake8]
exclude=requirements,.tox,.travis,docs
