[metadata]
name = django-leonardo
summary = A platform for fast building modern web applications with Django, FeinCMS, Horizon, Oscar and tons of another apps.
description-file =
    README.rst
author = Michael Kuty & Ales Komarek
author-email = kutymichael@gmail.com
home-page = https://github.com/django-leonardo/django-leonardo.git
classifier =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[files]
packages =
    leonardo

[extras_require]
admin = -r requirements/extras/admin/admin.txt
admin-bootstrap = -r requirements/extras/admin/bootstrap.txt
analytics = -r requirements/extras/analytics.txt
gallery = -r requirements/extras/gallery.txt
geo = -r requirements/extras/apps/geo.txt
blog = -r requirements/extras/apps/blog.txt
folio = -r requirements/extras/apps/folio.txt
forms = -r requirements/extras/apps/forms.txt
links = -r requirements/extras/apps/links.txt
store = -r requirements/extras/apps/store.txt
news = -r requirements/extras/apps/news.txt
team = -r requirements/extras/apps/team.txt
oembed = -r requirements/extras/apps/oembed.txt
static = -r requirements/extras/frontend/static.txt
oauth = -r requirements/extras/auth/oauth.txt
sentry = -r requirements/extras/extensions/sentry.txt
themes = -r requirements/extras/themes/themes.txt
adminlte = -r requirements/extras/themes/adminlte.txt
redactor = -r requirements/extras/wysiwyg/redactor.txt
pagepermissions = -r requirements/extras/extensions/pagepermissions.txt
redis = -r requirements/extras/redis.txt
debug = -r requirements/debug.txt
tests = -r requirements/tests.txt

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source

[wheel]
python-tag = py2

[pytest]
python_files=test_*.py *tests.py

[flake8]
exclude=requirements,.tox,.travis,docs
